booq/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booq-backend
  labels:
    app: booq-backend

spec:
  selector:
    matchLabels:
      app: booq-backend
  template:
    metadata:
      labels:
        app: booq-backend
    spec:
      nodeSelector:
        kubernetes.io/hostname: las211.tokyotech.org
      containers:
        - name: booq-backend
          image: ghcr.io/traptitech/booq:v1.5.4
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
